--- a/src/index.html
+++ b/src/index.html
@@ -2,16 +2,23 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Ceylon Paradise Traverls</title>
+  <title>Ceylon Paradise Travels</title>
   <link rel="icon" type="image/png" href="assets/img/logo.jpg">
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.0/css/all.min.css">
-<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
-<link rel="preconnect" href="https://fonts.gstatic.com">
-<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap" rel="stylesheet"> 
+
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.0/css/all.min.css">
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap" rel="stylesheet">
 </head>
+
 <body>
+  
   <app-root></app-root>
+  
+  <!-- Elfsight Website Translator | Untitled Website Translator -->
+  <script src="https://elfsightcdn.com/platform.js" async></script>
+  <div class="elfsight-app-ef87654d-df1d-400e-b01f-05eebae1ea0d" data-elfsight-app-lazy></div>
 </body>
 </html>
