--- a/src/index.html
+++ b/src/index.html
@@ -19,6 +19,6 @@
   
   <!-- Elfsight Website Translator | Untitled Website Translator -->
   <script src="https://elfsightcdn.com/platform.js" async></script>
-  <div class="elfsight-app-ef87654d-df1d-400e-b01f-05eebae1ea0d" data-elfsight-app-lazy></div>
+  <!-- <div class="elfsight-app-ef87654d-df1d-400e-b01f-05eebae1ea0d" data-elfsight-app-lazy></div> -->
 </body>
 </html>
