--- a/src/index.html
+++ b/src/index.html
@@ -11,6 +11,7 @@
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap" rel="stylesheet">
+  <meta name="google" content="notranslate">
 </head>
 
 <body>
@@ -18,7 +19,85 @@
   <app-root></app-root>
   
   <!-- Elfsight Website Translator | Untitled Website Translator -->
-  <script src="https://elfsightcdn.com/platform.js" async></script>
+  <!-- <script src="https://elfsightcdn.com/platform.js" async></script> -->
   <!-- <div class="elfsight-app-ef87654d-df1d-400e-b01f-05eebae1ea0d" data-elfsight-app-lazy></div> -->
+
+  <!-- Google Translate container -->
+<div id="google_translate_element" style="display:none;"></div>
+
+<script>
+  function googleTranslateElementInit() {
+    new google.translate.TranslateElement(
+      {
+        pageLanguage: 'en',
+        includedLanguages: 'si,it,fr,de,es,ta,hi,en',
+        autoDisplay: false
+      },
+      'google_translate_element'
+    );
+  }
+</script>
+
+<script src="https://translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
+
+<script>
+(async function autoTranslateByIP() {
+
+  // ✅ If user already selected a language, respect it
+  const savedLang = localStorage.getItem('preferred_lang');
+  if (savedLang) {
+    applyLanguage(savedLang);
+    return;
+  }
+
+  // 🌍 Detect country
+  let country = 'US';
+  try {
+    const res = await fetch('https://ipapi.co/json/');
+    const data = await res.json();
+    country = data.country;
+  } catch (e) {
+    console.warn('IP detection failed');
+  }
+
+  // 🗺️ Country → Language mapping
+  const map = {
+    LK: 'si', // Sri Lanka → Sinhala
+    IT: 'it', // Italy → Italian
+  };
+
+  const lang = map[country];
+  if (lang) {
+    applyLanguage(lang);
+    localStorage.setItem('preferred_lang', lang);
+  }
+
+  // 🔧 Apply language using Google Translate <select>
+  function applyLanguage(lang) {
+    const interval = setInterval(() => {
+      const select = document.querySelector('.goog-te-combo');
+      if (select) {
+        select.value = lang;
+        select.dispatchEvent(new Event('change'));
+        clearInterval(interval);
+      }
+    }, 500);
+  }
+
+})();
+</script>
+<script>
+(function hideGoogleTranslateBar() {
+  const interval = setInterval(() => {
+    const iframe = document.querySelector('.goog-te-banner-frame');
+    if (iframe) {
+      iframe.style.display = 'none';
+      document.body.style.top = '0px';
+      clearInterval(interval);
+    }
+  }, 100);
+})();
+</script>
+
 </body>
 </html>
