--- a/src/index.html
+++ b/src/index.html
@@ -2,8 +2,8 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Ceylon Paradise Travels</title>
-  <link rel="icon" type="image/png" href="assets/img/logo.jpg">
+  <title>Ceylon JoJo Travels</title>
+  <link rel="icon" type="image/png" href="assets/img/TLogo.png">
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
